Changes mainly updating from production servers.

--- a/app/views/callc/login.html.erb
+++ b/app/views/callc/login.html.erb
@@ -111,7 +111,7 @@
     <tr>
       <td align="center">
         <%= form_tag(:action => 'try_to_login') do %>
-            <%= text_field 'login', 'username', "size" => 25, :style => "font-size:15px; text-align: center;", :placeholder =>_('Email'), :class => "input", :tabindex => "1" %>
+            <%= text_field 'login', 'username', "size" => 25, :style => "font-size:15px; text-align: center;", :placeholder =>_('Login_Placeholder'), :class => "input", :tabindex => "1" %>
             <br/>
             <%= password_field 'login', 'psw', "size" => 25, :style => "font-size:15px; text-align: center;", :placeholder =>_('Password'), :class => "input", :tabindex => "2" %>
             <br/><br/>
