--- a/app/views/callc/signup_end.html.erb
+++ b/app/views/callc/signup_end.html.erb
@@ -38,7 +38,7 @@
               <td>
                 <table class="simple" width="100%" style=" color:white; font-size: 11px;">
                   <tr>
-                    <td><%= _('Username') %>:</td>
+                    <td><%= _('Username_device') %>:</td>
                     <td id="username"><b><%= @device.username %></b></td>
                   </tr>
                   <tr>
